--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
      <string name="app_name">ADEYA Wallet</string>
-    <string name="powered_by">Powered by Blockster Labs</string>
+    <string name="powered_by">Powered by AYANWORKS Technology Solutions</string>
 </resources>
